Improved on-map messages